# ds2lsom

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLAUDE.original.md  README.md  benchmark.ipynb  comparison.ipynb  example.ipynb  graph_comparison.ipynb  pyproject.toml
.github/workflows/: ci.yml  publish.yml
doc/: Makefile  api.rst  conf.py  index.rst  sg_execution_times.rst  user_guide.rst
ds2l_som/: __init__.py  ds2lsom.py
examples/: GALLERY_HEADER.rst  benchmark.ipynb  comparison.ipynb  graph_comparison.ipynb  plot_digits_clustering.py
tests/: conftest.py  test_ds2lsom.py  test_sklearn_compat.py
