[project]
name = "ds2l-som"
version = "0.3.0b1"
description = "DS2L-SOM is a Local Density-based Simultaneous Two-level Algorithm for Topographic Clustering"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [{ name = "Sandro Martens" }]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=2.0",
    "networkx>=3.0",
    "dbgsom>=1.2",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "matplotlib", "jupyter"]
docs = [
    "sphinx",
    "sphinx-gallery",
    "furo",
    "numpydoc",
    "matplotlib",
    "pillow",
    "scikit-learn",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "umap-learn>=0.5.12",
]
docs = [
    "sphinx",
    "sphinx-gallery",
    "furo",
    "numpydoc",
    "matplotlib",
    "pillow",
]
